[v0.1.4] Fix font-size jump
Previously, the stop name container was a h2, causing an increased font size before the stylesheet loaded. it has been changed to a <div> with this commit.

--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ h2 {
 
 .stop-container > :first-child {
     margin-bottom: .5em;
+    margin-top: .8em;
+    font-weight: bold;
 }
 
 @media (prefers-color-scheme: light) {
